modules/grammars/tool/src/test/resources/cocos/valid/RootNameResources.td
package valid;

resources RootNameResources {
    attribute path = "some/awesome/path";
}
