modules/grammars/tool/src/test/resources/cocos/invalid/RootNameResources.td
package invalid;

resources rootNameResources {
    attribute path = "some/awesome/path";
}
